--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ share/python-wheels/
 *.egg
 MANIFEST
 .chainlit/
+!.chainlit/config.toml
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
