--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,5 +10,5 @@ dependencies = [
     "openai==1.3.5",
     "pydantic==2.10.1",
     "python-dotenv==1.0.0",
-    "tiktoken==0.5.1",
+    "tiktoken>=0.6.0",
 ]
